discussion/kv_engine/153974/153974_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'refs/changes/65/153365/1' of http://review.couchbase.org/kv_engine into local

Change-Id: I077e90cc9e83610032cebf455d664d984db0a9fd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-05-19 19:06:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-19 20:15:54.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9027/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9027/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:10: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    bool supportsConcurrentTxns() const {
         ^
                                        override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:40: note: FIX-IT applied suggested code changes
    bool supportsConcurrentTxns() const {
                                       ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9027/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35893/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
..\kv_engine\tests\testapp\testapp_sasl.cc(325): error: Expected equality of these values:
  cb::mcbp::Status::NotMyVbucket
    Which is: I"m not responsible for this vbucket
  getRsp.getStatus()
    Which is: Not found
[  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (119 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35893/ )

Timeout of a CTest test 406/406 Test #403: cluster_test ..................................................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35893/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10721/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-19T19:20:00.737Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-19T19:20:00.737Z] Expected equality of these values:
[2021-05-19T19:20:00.737Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-19T19:20:00.737Z]     Which is: I"m not responsible for this vbucket
[2021-05-19T19:20:00.737Z]   getRsp.getStatus()
[2021-05-19T19:20:00.737Z]     Which is: Not found
[2021-05-19T19:20:00.737Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (35 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10721/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10980/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-19T19:31:49.892Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-19T19:31:49.893Z] Expected equality of these values:
[2021-05-19T19:31:49.893Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-19T19:31:49.893Z]     Which is: I"m not responsible for this vbucket
[2021-05-19T19:31:49.893Z]   getRsp.getStatus()
[2021-05-19T19:31:49.893Z]     Which is: Not found
[2021-05-19T19:31:49.893Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (300 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10980/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10580/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/McbpSsl
[2021-05-19T19:19:50.181Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-19T19:19:50.181Z] Expected equality of these values:
[2021-05-19T19:19:50.181Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-19T19:19:50.181Z]     Which is: I"m not responsible for this vbucket
[2021-05-19T19:19:50.181Z]   getRsp.getStatus()
[2021-05-19T19:19:50.181Z]     Which is: Not found
[2021-05-19T19:19:50.181Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/McbpSsl, where GetParam() = McbpSsl (33 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/McbpSsl
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10580/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18532/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-19T19:27:32.787Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-19T19:27:32.787Z] Expected equality of these values:
[2021-05-19T19:27:32.787Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-19T19:27:32.787Z]     Which is: I"m not responsible for this vbucket
[2021-05-19T19:27:32.787Z]   getRsp.getStatus()
[2021-05-19T19:27:32.787Z]     Which is: Not found
[2021-05-19T19:27:32.787Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (62 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18532/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18532/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7579/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30679/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9649/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-05-20 17:37:48.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
